--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.3",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/og": "^0.5.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -20,6 +21,7 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@types/react": "18.0.33",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.0"
